<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"
    tools:context=".JseekerSignUp">

    <ImageView
        android:id="@+id/img_jseeker_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:src="@drawable/arrow1"
        app:layout_constraintEnd_toStartOf="@+id/im_forgotlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_js_signup_logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/applogo"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="167dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:text="Job Seeker Sign Up"
        android:textColor="#072DF7"
        android:textSize="22dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_js_signup_logo" />

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_borders"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:hint="@string/et_user"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_ref_code" />

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_borders"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:hint="@string/et_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />

    <EditText
        android:id="@+id/et_signup_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_borders"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:hint="@string/et_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_email" />

    <EditText
        android:id="@+id/et_adhar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_borders"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="@font/lato_regular"
        android:inputType="number"
        android:hint="@string/et_aad_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_phone" />

    <EditText
        android:id="@+id/et_signup_pasword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_borders"
        android:ems="10"
        android:gravity="center"

        android:hint="@string/et_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adhar" />

    <!--<EditText-->
        <!--android:id="@+id/et_signup_conpasword"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:background="@drawable/et_borders"-->
        <!--android:ems="10"-->
        <!--android:gravity="center"-->
        <!--android:hint="@string/et_confpass"-->
        <!--android:inputType="textPassword"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.494"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/et_signup_pasword" />-->

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/btn_borders"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="Sign up"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_pasword" />

    <EditText
        android:id="@+id/sp_ref_code"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/et_borders"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ref_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

    <!--<ImageView-->
        <!--android:layout_width="35dp"-->
        <!--android:layout_height="20dp"-->
        <!--android:layout_marginStart="280dp"-->

        <!--android:layout_marginLeft="280dp"-->
        <!--android:layout_marginTop="139dp"-->
        <!--android:src="@drawable/down_spin_img"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tv_ref_code"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="Reference Code:"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/sp_ref_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />


</android.support.constraint.ConstraintLayout>